[package]
name = "stellar-agent-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "MCP stdio server for the Stellar agent wallet. Tools are registered at link time via the #[mcp_tool_router]/#[mcp_tool_item] macro pair (stellar-agent-mcp-macros) with inventory-based discovery."
readme = "README.md"
keywords = ["stellar", "mcp", "ai-agent", "wallet", "soroban"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]

[lib]
name = "stellar_agent_mcp"
path = "src/lib.rs"

[[bin]]
name = "stellar-agent-mcp"
path = "src/main.rs"

# `cargo binstall stellar-agent-mcp` support. The CLI and MCP binaries share a
# single release archive; `{ bin }` resolves to `stellar-agent-mcp` here via the
# `[[bin]]` declaration above.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/stellar-agent-{ version }-{ target }.tar.xz"
pkg-fmt = "txz"
bin-dir = "stellar-agent-{ version }-{ target }/{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.'cfg(target_os = "windows")']
pkg-url = "{ repo }/releases/download/v{ version }/stellar-agent-{ version }-{ target }.zip"
pkg-fmt = "zip"

[dependencies]
stellar-agent-core       = { workspace = true }
stellar-agent-network    = { workspace = true }
# Smart-account rules observability — SignersManager / ContextRuleManager for
# the stellar_rules_list / stellar_rules_get read-only tools.
stellar-agent-smart-account = { workspace = true }

# Blend lending adapter — `lend` verb.
stellar-agent-blend      = { workspace = true }
# DeFindex vault adapter — `vault` verb.
stellar-agent-defindex   = { workspace = true }
# Soroswap DEX swap adapter — `trade` verb.
stellar-agent-dex        = { workspace = true }
# Stablecoin substrate — `trustline` verb.
stellar-agent-stablecoin = { workspace = true }
# Claimable-balance substrate — `stellar_claim` / `stellar_claim_commit` verbs.
stellar-agent-claimable  = { workspace = true }
# DeFi dispatch seam (live_verb_registry, dispatch_gate, SubmitWitness).
stellar-agent-defi       = { workspace = true }

# Capability-to-tool matrix + enforcement for toolsets.
stellar-agent-toolsets-runtime = { workspace = true }
stellar-agent-toolsets     = { workspace = true }

# SEP-43 ModuleInterface dispatch — Sep43Error, StellarAgentModule, ModuleAdapter
# for the SEP-43 MCP tools.
stellar-agent-sep43      = { workspace = true }

# x402 Exact Stellar payment scheme (payer side) — create_payment, wire types,
# encode_payment_signature for the x402 MCP tools.
stellar-agent-x402       = { workspace = true }

# SEP-48 typed-preview + SEP-47 claim-discovery — fetch_contract_spec,
# decode_invoke_host_function, render_typed_args, discover_claimed_seps.
stellar-agent-sep48      = { workspace = true }

# SEP-53 prefixed message sign/verify — sign_message, verify_message, Sep53Error.
stellar-agent-sep53      = { workspace = true }

# SEP-7 inbound URI parse + verify — parse_uri, parse_and_verify_uri,
# build_preview, Sep7Error.
stellar-agent-sep7       = { workspace = true }

# SEP-24 interactive hand-off + SEP-6 discovery — get_sep6_info,
# start_sep24_interactive, AnchorError.
stellar-agent-anchor     = { workspace = true }

# SEP-10 counterparty-identity pre-payment gate — resolve_and_verify_counterparty,
# VerifiedCounterpartySession, IdentityError.
stellar-agent-x402-identity = { workspace = true }

# Memo type matching in the stellar_pay response builder.
stellar-xdr              = { workspace = true }

# Nonce mint + replay window for stellar_create_account(_commit).
stellar-agent-nonce      = { workspace = true }

# #[mcp_tool_router] / #[mcp_tool_item] attribute macros + McpToolRegistration
# registry, iterated by WalletServer::new over registered tools.
stellar-agent-mcp-macros = { workspace = true }

# inventory runtime (companion to stellar-agent-mcp-macros): iterate the
# McpToolRegistration records emitted at link time.
inventory = { workspace = true }

# G-strkey validation at the tool boundary.
stellar-strkey = { workspace = true }

# MCP server framework. The default IntoTransport adapter is not used; the
# transport is an AsyncRwTransport constructed with an explicit
# JsonRpcMessageCodec::new_with_max_length (1 MiB) at the transport site in main.rs.
rmcp      = { workspace = true }
schemars  = { workspace = true }

# Structured logging.
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# JSON value manipulation for the policy-engine dispatch site.
serde_json = { workspace = true }

# Serde derive for the rules-observability output structs (Envelope<T: Serialize>).
serde = { workspace = true }

# Per-request correlation IDs for the rules-observability tools' smart-account
# manager calls.
uuid = { workspace = true }

# URL parsing for same-endpoint cross-check diagnostics.
url = { workspace = true }

# OS-conventional counterparty cache directory resolution.
directories = { workspace = true }

# Codec framing for the bounded max-line transport (FramedRead / FramedWrite).
tokio-util = { workspace = true }

# SinkExt + StreamExt traits for the bounded stdio transport.
futures = { workspace = true }

# Tokio async runtime — `rt-multi-thread` for the MCP stdio server.
tokio = { workspace = true, features = ["rt-multi-thread", "io-std"] }

# Raw prctl(2) on Linux for process isolation; #[cfg(target_os = "linux")] only,
# a zero-dep no-op on macOS/Windows.
libc = { workspace = true }

# Owner-key lookup in build_policy_engine (server.rs).
base64     = { workspace = true }
keyring-core = { workspace = true }
ed25519-dalek = { workspace = true }
# Hex encode/decode for rule_create.rs (context wasm-hash grammar, raw
# External signer pubkey_data).
hex = { workspace = true }

# SEP-7 origin_domain verification makes a fresh stellar.toml HTTPS GET via
# reqwest; the Client is constructed in the stellar_sep7_parse_uri tool fn.
reqwest = { workspace = true }

# Zeroize attestation key bytes on drop.
zeroize = { workspace = true }

[dev-dependencies]
stellar-agent-toolsets-runtime = { path = "../stellar-agent-toolsets-runtime", features = ["test-helpers"] }
# Path-only self-reference: enables this crate's own test features for its tests
# and is stripped from the published manifest like every internal dev-dependency.
stellar-agent-mcp = { path = ".", features = ["test-helpers"] }
stellar-agent-test-support = { path = "../stellar-agent-test-support", features = ["test-helpers"] }
stellar-agent-network = { path = "../stellar-agent-network", features = ["test-loopback"] }
stellar-agent-nonce = { path = "../stellar-agent-nonce", features = ["test-helpers"] }
tempfile                   = { workspace = true }
tokio                      = { workspace = true, features = ["rt-multi-thread", "process", "io-util", "time", "sync", "test-util"] }
regex-lite                 = { workspace = true }
# The loopback approval-inbox server, driven over real HTTP in the
# approve-serve testnet acceptance test (gated behind testnet-acceptance).
stellar-agent-approval-ui = { path = "../stellar-agent-approval-ui" }
serde_json                 = { workspace = true }
# registry_walk.rs iterates McpToolRegistration records and cross-checks the
# rmcp ToolRouter.
inventory                  = { workspace = true }
# test-helpers enables the STELLAR_AGENT_HOME override on
# default_policy_window_state_path_for() in test builds — required by tests
# that dispatch a stateful (per_period_cap / rate_limit) V1 policy engine
# through dispatch_gate_inner's window-state refresh/record and need the
# persisted store isolated to a temp dir instead of the real OS state dir.
stellar-agent-core = { path = "../stellar-agent-core", features = ["test-helpers"] }
stellar-agent-mcp-macros = { path = "../stellar-agent-mcp-macros" }
# Wiremock for the friendbot + balances handler tests.
wiremock                   = { workspace = true }
url                        = { workspace = true }
# async_trait for the handler-level capability tests.
async-trait                = { workspace = true }
# rmcp model types (ErrorCode, CallToolResult) used in capability-test assertions.
rmcp                       = { workspace = true }
# serial_test for tests that mutate the process-global keyring store.
serial_test                = { workspace = true }
# base64 + keyring-core for create_account nonce test helpers.
base64                     = { workspace = true }
keyring-core               = { workspace = true }
# Sign synthetic policy TOML for the policy-engine wiring test.
rand_core                  = { workspace = true }
# Friendbot HTTP + ed25519 keypair generation in the testnet acceptance tests
# (gated behind testnet-acceptance; dev-dep only, never in the production binary).
reqwest                    = { workspace = true }
ed25519-dalek              = { workspace = true }
zeroize                    = { workspace = true }
# x402 wire types + XDR decode in the testnet acceptance tests.
stellar-agent-x402 = { path = "../stellar-agent-x402" }
stellar-strkey             = { workspace = true }
stellar-xdr                = { workspace = true }
# SHA-256 for HashIdPreimage construction in the x402 / claim testnet
# acceptance tests.
sha2                       = { workspace = true }
# Construct CreateClaimableBalance transactions directly in the claim testnet
# acceptance test; production code has no balance-creation path (only
# ClaimClaimableBalance, via ClassicOpBuilder), so the test builds the
# fixture with stellar-baselib.
stellar-baselib            = { workspace = true }

[features]
# Exposes call_stellar_* test helpers used by the integration tests and the
# binary smoke-test harness. Must NOT be enabled in production builds.
test-helpers = [
    # Enable GatedInvokeParams override fields (approval_dir_override,
    # grant_store_path_override) used by the toolsets.rs test-helpers block.
    "stellar-agent-toolsets-runtime/test-helpers",
]
# Gate end-to-end testnet acceptance tests that require a live Friendbot + RPC.
# These tests are NOT run under default `cargo test`; invoke with:
#   cargo test -p stellar-agent-mcp --features testnet-acceptance \
#     --test sep43_sign_and_submit_transaction_testnet_acceptance
# This feature is CI/dev-only and MUST NOT be enabled in any release-artefact
# feature set.
testnet-acceptance = ["stellar-agent-test-support/testnet-helpers"]

[lints]
workspace = true
