[package]
name = "stellar-agent-nonce"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "HMAC-SHA256 wallet-issued nonce with a replay window and key rotation for the Stellar agent wallet."
readme = "README.md"
keywords = ["stellar", "nonce", "hmac", "replay", "wallet"]
categories = ["cryptography::cryptocurrencies", "cryptography"]

[lib]
name = "stellar_agent_nonce"

[features]
# Enables test-only inspection helpers (`Nonce::from_raw`, `Nonce::salt`,
# `Nonce::tag`, `NonceMint::boot_nonce`). Never enable in production builds.
test-helpers = []

# Enables the panic-injection hooks (`PANIC_AFTER_LOAD`, `DROP_COUNTER`) for the
# zeroisation panic-safety integration test. Never enable in production builds.
test-hooks = []

[dependencies]
stellar-agent-core = { workspace = true }
stellar-agent-network = { workspace = true }
# Direct keyring access for Entry::new / get_password / set_password.
keyring-core = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
rand_core = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
stellar-agent-test-support = { path = "../stellar-agent-test-support" }
serial_test = { workspace = true }
tokio = { workspace = true, features = ["rt", "macros", "rt-multi-thread"] }
stellar-agent-nonce = { path = ".", features = ["test-helpers", "test-hooks"] }

[lints]
workspace = true
