[package]
name = "stellar-agent-pool"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Channel-account pool with sponsored-reserve funded initialisation and exhaustion-typed errors for concurrent transaction submission in the Stellar agent wallet."
readme = "README.md"
keywords = ["stellar", "channel-account", "pool", "wallet", "soroban"]
categories = ["cryptography::cryptocurrencies"]

[lib]
name = "stellar_agent_pool"
path = "src/lib.rs"

[dependencies]
# Workspace deps
thiserror             = { workspace = true }
serde                 = { workspace = true }
serde_json            = { workspace = true }
tracing               = { workspace = true }
tokio                 = { workspace = true, features = ["rt", "macros", "time"] }
zeroize               = { workspace = true }
secrecy               = { workspace = true }
base64                = { workspace = true }
stellar-strkey        = { workspace = true }
# stellar-xdr is only used by assert_sandwich_structure (test-helpers gate) to
# decode the envelope XDR and inspect op-level sources and operation bodies.
# It is optional here; the test-helpers feature enables it.
stellar-xdr           = { workspace = true, optional = true }
# keyring-core: used by derive::load_pool_master_seed_from_keyring to read the
# pool master seed with proper Zeroizing on both the base64 string and decoded bytes.
keyring-core          = { workspace = true }

# Stellar agent workspace crates
stellar-agent-core    = { workspace = true }
stellar-agent-network = { workspace = true }
stellar-agent-sep5  = { workspace = true }

[dev-dependencies]
tokio                      = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
stellar-agent-test-support = { path = "../stellar-agent-test-support", features = ["test-helpers"] }
stellar-xdr                = { workspace = true }
stellar-agent-network = { path = "../stellar-agent-network" }
wiremock                   = { workspace = true }
tempfile                   = { workspace = true }
serial_test                = { workspace = true }
base64                     = { workspace = true }
keyring-core               = { workspace = true }
# testnet-acceptance test deps
ed25519-dalek              = { workspace = true }
rand_core                  = { workspace = true }
stellar-strkey             = { workspace = true }
reqwest                    = { workspace = true }
secrecy                    = { workspace = true }

[features]
# Expose test-only helpers (assert_sandwich_structure, etc.).
# Enables stellar-xdr for the XDR-inspection helper.
test-helpers = ["dep:stellar-xdr"]
# Gate end-to-end testnet acceptance tests.
# Run with: cargo test -p stellar-agent-pool --features testnet-acceptance
testnet-acceptance = ["test-helpers"]

[[test]]
name = "init"
required-features = ["test-helpers"]

[[test]]
name = "init_structure"
required-features = ["test-helpers"]

[[test]]
name = "pool_testnet_init"
required-features = ["testnet-acceptance"]

[[test]]
name = "pool_concurrent_testnet"
required-features = ["testnet-acceptance"]

[[test]]
name = "load_testnet"
required-features = ["testnet-acceptance"]

[lints]
workspace = true
