[package]
name = "stellar-agent-sep10"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SEP-10 Stellar Web Authentication client: challenge validation, ephemeral-key signing, and JWT session handling."
readme = "README.md"
keywords = ["stellar", "sep-10", "authentication", "jwt", "wallet"]
categories = ["cryptography::cryptocurrencies", "authentication"]

[dependencies]
stellar-xdr = { workspace = true }
# XDR decode limits: depth + length bounds for untrusted challenge envelopes.
stellar-agent-xdr-limits = { workspace = true }
stellar-strkey = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
serial_test = { workspace = true }
wiremock = { workspace = true }

[features]
# Live network round-trip tests against the SDF testnet anchor. Implies the
# test-helpers feature.
testnet-integration = ["test-helpers"]
# Exposes ephemeral key-generation helpers to integration-test binaries, which
# do not receive cfg(test) and so cannot reach test-only inherent functions.
test-helpers = []

[lints]
workspace = true
