[package]
name = "stellar-agent-sep5"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "SEP-5 / BIP-44 HD-path ed25519 key derivation for Stellar."
readme = "README.md"
keywords = ["stellar", "sep-5", "bip-44", "ed25519", "hd-wallet"]
categories = ["cryptography::cryptocurrencies", "cryptography"]

[dependencies]
hmac = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = { workspace = true }
bip39 = { workspace = true }
stellar-strkey = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
# Encode/decode hex for the BIP-39 seed and intermediate-key assertions.
hex = { workspace = true }
# Re-derive the m/44'/148' intermediate key in the test helper.
hmac = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
